--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
@@ -27,3 +27,12 @@
     box-shadow: 3px 3px 3px 2px #4caf5057;
     color: #000;
 }
+.job-cards h6 {
+    font-weight: 700;
+    font-size: 13px;
+    color: #465666;
+    margin-bottom: 7px;
+}
+.isMatchesView{
+	padding:0px !important;
+}
