--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -69,7 +69,7 @@
             </span>
           </ng-template>
         </ng-container>
-        <h6 *ngIf="userInfo?.social_media_link?.length" style="margin: 0px !important;">
+        <h6 *ngIf="userInfo?.social_media_link?.length && isMatchesShow == false" style="margin: 0px !important;">
           <ng-container *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0); else elseTemplate">
             <a class="mr-1" *ngFor="let item of userInfo?.social_media_link" href="{{item.url}}" target="_blank">
               <ng-container [ngSwitch]="item?.media">
