--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -1,7 +1,7 @@
 <div class="row  info-box">
-	<div class="col-lg-12">
+	<div class="col-lg-12 mt-3">
 		<div class="accordion mt-5 ">
-			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='0'">
+			<div  *ngIf="postedJobsDetails?.match_select?.experience=='0'">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
