--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -91,7 +91,7 @@
 														</div>
 														<div class="col-lg-4">
 															<span class="mr-2">														
-																<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_resume)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_cover) && onToggleCoverForm(true, (matchingUsersMeta?.doc_resume?.path + '/' + matchingUsersMeta?.doc_resume?.folder + '/' + onGetFilteredValue(matchingUsers?.profile?.doc_cover)))" class="btn btn-outline-orange btn-sm" data-toggle="modal" data-target="#resumeModal">
+																<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_cover)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_cover) && onToggleCoverForm(true, (matchingUsersMeta?.doc_resume?.path + '/' + matchingUsersMeta?.doc_resume?.folder + '/' + onGetFilteredValue(matchingUsers?.profile?.doc_cover)))" class="btn btn-outline-orange btn-sm" data-toggle="modal" data-target="#resumeModal">
 																		<small><i class="fas fa-file-alt"></i> Cover Letter</small>
 																	</a>	
 															</span>	
@@ -140,7 +140,7 @@
 															</div>	
 														</div>
 														<div class="col-lg-3">
-															<a [class.disabled]="OpenMatchPopups(matchingUsers)" (click)="OpenMatchPopup(matchingUsers)"  >
+															<a [class.disabled]="OpenMatchPopups(matchingUsers)" [ngClass]="(OpenMatchPopups(matchingUsers) == true)?'':'a-class'"  (click)="OpenMatchPopup(matchingUsers)"  >
 																		<small><i class="fab fa-buffer"></i> View Other Matches</small>
 																	</a>
 														</div>
