--- a/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
@@ -1,9 +1,9 @@
-<div class="matchs-info" style="z-index: 999;" style="top: -55px !important;">
+<div [ngClass]="isMultipleMatches ? 'top-pad' : 'top-pad-1'" class="matchs-info" style="z-index: 999;" style="left: 30px;">
 	<button (click)="onShowMatches($event)" id="matchBtnVal" class="matchBtn  btn-sm btn btn-fltr btn-light" [ngClass]="matchedElement ? 'btn-fltr-active' : ''" ><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
 	<button (click)="onShowMissing($event)" id="missBtnVal"  class="missBtn  btn-sm btn btn-fltr btn-light"  [ngClass]="missingElement ? 'btn-fltr-active' : ''"  ><img src="assets/images/missing-icon.png" width="15px" class="ml-0"> Missing </button>
 </div>
 <div class=" info-box">
-	<div class="col-lg-12" [ngClass]="isMultipleMatches ? 'top-pad' : 'mt-3'">
+	<div class="col-lg-12" >
 		<div class="accordion ">
 			<div class="pj-title "  *ngIf="!isMultipleMatches">
 				<h6 class="mb-0" type="button">
@@ -11,9 +11,7 @@
 				 </h6>
 			</div>
 			<div  *ngIf="isMultipleMatches" style="margin-top: 3rem !important;">
-				<h6 class="mb-0" type="button">
-					
-				 </h6>
+				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='0'">
 				<ul class="list-group">
@@ -413,9 +411,7 @@
 				 </h6>
 			</div>
 			<div class="pj-title mt-3" *ngIf="isMultipleMatches" >
-				<h6 class="mb-0" type="button">
-					
-				 </h6>
+				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='1'">
 				<ul class="list-group">
@@ -817,9 +813,7 @@
 			</div>
 			
 			<div class="pj-title" *ngIf="isMultipleMatches" >
-				<h6 class="mb-0" type="button">
-					
-				 </h6>
+				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='2'">
 				<ul class="list-group">
@@ -1219,9 +1213,7 @@
 				 </h6>
 			</div>
 			<div class="pj-title" *ngIf="isMultipleMatches" >
-				<h6 class="mb-0" type="button">
-					
-				 </h6>
+				
 			</div>
 		</div>
 		
