Screening Process Changes

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -128,7 +128,7 @@
 			</div>
 			<app-control-messages [control]="f['remote']"></app-control-messages>
 		</div>
-		<div class="col-lg-4 col-md-6">
+		<!-- <div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postJob.relocate" | translate}} </label>
 				<div appMarkAsterisk class="mt-2">
@@ -143,7 +143,7 @@
 				</div>
 			</div>
 			<app-control-messages [control]="f['willing_to_relocate']"></app-control-messages>
-		</div>
+		</div> -->
 	</div>
 	<div class="row mt-2">
 		<div class="col-md-12">
