--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -23,6 +23,7 @@
               <!-- <th scope="col">{{"postJob.location" | translate}}</th> -->
               <th scope="col">{{"dashboard.jobDetails" | translate}}</th>
               <th scope="col">{{"dashboard.status" | translate}}</th>
+              <th scope="col">Message</th>
              <!--  <th scope="col" class="text-center">{{"dashboard.action" | translate}}</th> -->
             </tr>
             </thead>
@@ -50,15 +51,24 @@
 				  {{selectedJob.title}}
 				  </td>
 				  <td class="text-center">
-					<select class="form-control form-control-td"  (change)="onChangeStatus(item, $event?.target?.value)">
+				  <h6 class="text-warning" *ngIf="item?.status == 6"> Not Available</h6>
+				  <h6 class="text-warning" *ngIf="item?.success == 2">Hired </h6>
+				  <h6 class="text-danger" *ngIf="item?.status == 4"> Rejected</h6>
+					<select *ngIf="item?.status !=6 && item?.status !=2 && item?.status !=4  " class="form-control form-control-td"  (change)="onChangeStatus(item, $event?.target?.value)">
 					  <option [value]="1" [selected]="item?.status == 1">Choose</option>
-					  <option [value]="2" [selected]="item?.status == 2">Selected</option>
 					  <option [value]="3" [selected]="item?.status == 3">Interview scheduled</option>
-					  <option [value]="4" [selected]="item?.status == 4">Rejected</option>
+					  <ng-container *ngIf="item?.job_posting?.screening_process?.length;">
+						<option *ngFor="let option of item?.job_posting?.screening_process; index as i"
+							[value]="i+7" [selected]="item?.status == i+7"> {{ option.title }}</option>
+					  </ng-container>
 					  <option [value]="5" [selected]="item?.status == 5">On Hold</option>
 					  <option [value]="6" [selected]="item?.status == 6">Not Available</option>
+					  <option [value]="2" [selected]="item?.status == 2">Hired</option>					  
+					  <option [value]="4" [selected]="item?.status == 4">Rejected</option>
+					  
 					</select>
 					</td>
+				  <td class="text-center text-blue"><a (click)="openMessagePopup(item)"><i class="fas fa-file-alt"></i></a></td> 
 				  <!-- <td class="text-center"><a  class="text-danger"><i class="fas fa-trash-alt"></i></a></td>  -->
                 </tr>
               </ng-container>
@@ -81,3 +91,56 @@
     </div>
   </div>
 </section>
+<ng-template *ngIf="isCheckModel" #checkModal let-modal>
+	<div class="modal-content">
+		<div class="modal-header">
+			<h5 class="modal-title" id="exampleModalLabel">Message</h5>
+			<button type="button" class="close" (click)="cancelCheck()">
+				<span aria-hidden="true">×</span>
+			</button>
+		</div>
+		<div class="modal-body job-card" style="box-shadow: none;">
+			<div class="media">
+				<img class="mr-3" [src]="messagePopupValue?.user?.photo ? (messagePopupValue?.meta?.photo?.path+'/'+ messagePopupValue?.meta?.photo?.folder+'/'+messagePopupValue?.meta?.photo?.sizes?.medium+'/'+messagePopupValue?.user?.photo) : 'assets/images/user-img-icon.jpg'">
+				<div class="media-body">
+					<h6 class="text-green">{{(messagePopupValue?.user?.first_name ? messagePopupValue?.user?.first_name : '') + ' '
+						+ (messagePopupValue?.user?.last_name ? messagePopupValue?.user?.last_name : '')}}</h6>
+					<h6>{{messagePopupValue?.user?.job_role}}</h6>
+					<h6>{{messagePopupValue?.user?.city ? messagePopupValue?.user?.city+', '  : ''}}
+						{{messagePopupValue?.user?.state ? messagePopupValue?.user?.state+', '  : ''}}
+						<span class="text-uppercase">
+							{{messagePopupValue?.user?.country ? messagePopupValue?.user?.country : ''}}
+						</span>
+					</h6>
+				</div>
+			</div>
+			<form class="mt-3">
+				<div class="form-group">
+					<label for="exampleFormControlSelect1">Choose Status</label>
+					<select appMarkAsterisk class="form-control form-control-sm" name="exampleFormControlSelect1" (change)="onChangeStatusPop($event?.target?.value)" id="exampleFormControlSelect1" [(ngModel)]="selectedStatusValue" >
+						<option [value]="1" [selected]="messagePopupValue?.status == 1">Choose</option>
+						<option [value]="3" [selected]="messagePopupValue?.status == 3">Interview scheduled</option>
+						<ng-container *ngIf="messagePopupValue?.job_posting?.screening_process?.length;">
+							<option *ngFor="let option of messagePopupValue?.job_posting?.screening_process; index as i"
+								[value]="i+7" [selected]="messagePopupValue?.status == i+7"> {{ option.title }}</option>
+						</ng-container>
+						<option [value]="5" [selected]="messagePopupValue?.status == 5">On Hold</option>
+						<option [value]="6" [selected]="messagePopupValue?.status == 6">Not Available</option>
+						<option [value]="2" [selected]="messagePopupValue?.status == 2">Hired</option>					  
+						<option [value]="4" [selected]="messagePopupValue?.status == 4">Rejected</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">Status Message</label>
+					<textarea appMarkAsterisk class="form-control" name="exampleFormControlTextarea1"  id="exampleFormControlTextarea1" rows="4" [(ngModel)]="selectedStatusMessage" >
+					</textarea>
+				</div>
+				<h6 *ngIf="isErrorShownValue" style="color:red;"> Please select the valid status </h6>
+			</form>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-sm btn-secondary" (click)="cancelCheck()" >Close</button>
+			<button type="button" [disabled]="selectedStatusValue ==null || selectedStatusValue =='' || selectedStatusMessage == null || selectedStatusMessage =='' " class="btn btn-sm btn-primary"  (click)="sendMessage()"  >Send Message</button>
+		</div>
+	</div>
+</ng-template>
