--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -72,7 +72,7 @@
 								--
 							</ng-container>
 							<h6 class="text-capitalize job-cardh6" >{{"postJob.remote" | translate }} : {{utilsHelperService.onGetYesOrNoValue(postedJobsDetails?.remote)}}</h6>
-							<h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate }} : {{utilsHelperService.onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}}</h6>
+							<!-- <h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate }} : {{utilsHelperService.onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}}</h6> -->
 						</div>
 					</div>
               </div>
@@ -82,14 +82,29 @@
         <app-shared-job-profile [jobInfo]="postedJobsDetails" [fieldsExclude]="{salary: true, visa_sponsorship: true, end_to_end_implementation: true}">
         </app-shared-job-profile>
       </div>
-      <div class="col-lg-4" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobs?.length && !postedJobs?.includes(postedJobsDetails?.id)">
-        <div class="title">
+      <div class="col-lg-4" >
+		<div class="title" *ngIf="postedJobsDetails?.screening_process && postedJobsDetails?.screening_process.length">
+          <h2>
+            Screening Process           
+          </h2>
+        </div>
+		<div class="sidebar-widget px-4" *ngIf="postedJobsDetails?.screening_process && postedJobsDetails?.screening_process.length">
+			<div class="row mt-3 mb-3" *ngFor="let items of postedJobsDetails?.screening_process;let i=index">
+				<div class="col-lg-2 col-md-3 text-left">
+					<h6 class="font-weight-bold">{{i+1}}.</h6> 
+				</div>	
+				<div class="col-lg-10 col-md-9 text-left">
+					<h6>{{items.title}}</h6>
+				</div>	
+			</div>
+		</div>
+        <div class="title" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobs?.length && !postedJobs?.includes(postedJobsDetails?.id)">
           <h2>
             Other Post
             <!-- {{"dashboard.yourPostJobs" | translate }} -->
           </h2>
         </div>
-        <div class="sidebar-widget text-left">
+        <div class="sidebar-widget text-left" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobs?.length && !postedJobs?.includes(postedJobsDetails?.id)">
           <div class="card" *ngFor="let item of postedJobs; let i=index">
             <div class="card-body p-3" *ngIf="item?.id != postedJobsDetails?.id">
               <a href="javascript:;" [routerLink]="['/employer/job-detail-view', 'details']" [queryParams]="{id: item?.id}" >
