--- a/frontend/src/app/modules/features/employer/post-job/post-job-header/post-job-header.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-header/post-job-header.component.html
@@ -20,4 +20,11 @@
     Other Preference
     </a>
   </li>
+  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 4}">
+    <a
+    (click)="onTabChange({tabName: 'Screening Process', tabNumber: 4})"
+    href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 4}">
+	Screening Process
+    </a>
+  </li>
 </ul>
